# taro

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md
.github/workflows/: release.yml
crates/app/: Cargo.toml
crates/app/assets/cards/: SOURCE.md
crates/app/assets/fonts/: SOURCE.md
crates/app/src/: capture.rs  cards.rs  interact.rs  layout.rs  main.rs  panel.rs  question.rs  reading_view.rs  textures.rs  theme.rs  tween.rs
crates/domain/: Cargo.toml
crates/domain/data/: meanings.ron
crates/domain/src/: card.rs  deck.rs  lib.rs  meanings.rs  reading.rs  spread.rs
crates/domain/src/spreads/: celtic_cross.rs
crates/domain/tests/: domain.rs
packaging/linux/: AppRun  build-appimage.sh  taro.desktop
scripts/: fetch_cards.py
